# master

./: .gitignore  README.md  format_code_style.py
book/cxx_primer/: README.md
book/cxx_primer/src/chapter1/: inside_type.cc
book/cxx_primer/src/chapter10/: count.cc  find.cc  find_if.cc  for_each.cc  lambda.cc  lambda2.cc  sort.cc  unique.cc
book/cxx_primer/src/chapter2/: c_over_write.c  c_over_write2.c  constexpr.cc  extern_c.cc  extern_define.cc  extern_err.cc  extern_err2.cc  extern_ref.cc  hidden_transfer.cc  ref.cc  typedef  typedef.cc  unsigned_alert.cc  void_ptr.cc
book/cxx_primer/src/chapter3/: c_str.cc  init_vector  init_vector.cc
book/cxx_primer/src/chapter4/: cast  cast.cc  const_cast  const_cast.cc  haixiang.cc
book/cxx_primer/src/chapter5/: exception  exception.cc
book/cxx_primer/src/chapter6/: best_function_ptr.cc  function_ptr.cc  function_ptr_ret.cc  inline.cc  inline_func.h  override.cc  ret  ret.cc
book/cxx_primer/src/chapter7/: class_init.cc  class_static.cc  explicit.cc  friend_class.cc  illegal_init.cc  mutable.cc  static_class.cc  this  this.cc  trans.cc
book/cxx_primer/src/chapter8/: io.cc  io_bin.cc  sstream.cc
book/cxx_primer/src/chapter9/: emplace_better.cc  like_vector.cc  priority.cc  queue.cc  stack.cc  str.cc  vector_test.cc
book/fluent_py/: README.md  chapter10.ipynb  chapter11.ipynb  chapter9.ipynb  create_named_tuple.py  decorate_with_params.py  quick_sort.py  reduce.py
book/fluent_py/pre_chapter_18/: async_ex.py  thread_ex.py
book/fluent_py/py/: clock.py  closure.py  create_named_tuple.py  decorate.py  decorate_with_params.py  dis_example.py  function_args.py  function_signature.py  global.py  local_variable.py  lru_cache.py  partial.py  reduce.py  singledispatch_example.py
book/fluent_py/py/chapter8/: box_and_label.py  is_and_eq.py  left_fruit.py  use_del.py
book/pasr/chapter2/: main.ipynb
book/pytorch_introduction/: README.md  chapter2.ipynb
book/pytorch_introduction/chapter1/: L2_regularization.py  Lx_loss.py  NL_preprocess.py  README.md  cross_entropy.py  image_preprocess.py  speech.py  speech_masking.py  use_librosa.py  use_wave.py
book/pytorch_introduction/chapter1/resources/: text.txt
course/high-ai/AC/: README.md  log
course/high-ai/AC/matlab/: F.m  G2D.m  main.m  main01.m  main1.m  main2.m
course/high-ai/AC/py/: main.py  utils.py
course/high-ai/AC/resources/: config.json  space.txt
course/high-ai/Astar/: README.md  solution.py  space.txt
course/high-ai/GA/: README.md
course/high-ai/GA/matlab/: best.m  binary2decimal.m  crossover.m  initpop.m  main.m  mutation.m  selection.m
course/high-ai/GA/py/: main.py  utils.py
course/high-ai/GA/resources/: config.json
course/high-ai/cross-river/: README.md  solution.py  space.json
course/high-ai/final_project/: README.md
course/high-ai/final_project/part1/: main.py  utils.py
course/high-ai/final_project/part1_1/: cnn.py  fc.py  main.py  sk.py  utils.py
course/high-algh/: README.md  log.txt
course/high-algh/old/: README.md
course/high-algh/old/solution/: 3d-map.py
course/high-algh/resources/: input.json
course/high-algh/solution/: 3d-map.py  benchmark.py  main.py  static.py  test.py
course/high-algh/solution/useless/: README.md  main.py
course/high-algh/tool/: static.py  test_dataset.py
course/infor-system-security/Fault_Tolerant/: neurips_2022.sty
course/infor-system-security/sm4_cpp/: CMakeLists.txt  README.md  README_en.md  build.sh
course/infor-system-security/sm4_cpp/include/: core.h
course/infor-system-security/sm4_cpp/src/: benchmark.cc  sm4.cc
course/infor-system-security/sm4_cxx/: CMakeLists.txt  README.md  README_en.md  build.sh
course/infor-system-security/sm4_cxx/include/: core.h  sm4.h
course/infor-system-security/sm4_cxx/src/: benchmark.cc  bin.cc  core.cc  sm4.cc
course/infor-system-security/sm4_cxx/tools/: draw.py
course/nlp/: README.md  tutorial.md
course/nlp/preprocess/: clean.py
course/nlp/resources/: config.json
course/nlp/resources/log/: 2022-11-25-20-16-12.txt
course/nlp/src/: dataset.py  infer.py  model.py  train.py  utils.py
course/nlp/test/: build.ipynb  vector2word.py
course/spda/: README.md  neurips_2022_zh.tex  ref.bib
high-ai/Astar/: README.md  solution.py
high-ai/cross-river/: solution.py  space.json
infor-system-security/Fault_Tolerant/: neurips_2022.tex  ref.bib
infor-system-security/sm4_cpp/include/: sm4.h
infor-system-security/sm4_cpp/src/: sm4.cc
leetcode/: 1616.py
resources/latex-template/basic/: neurips_2022_zh.sty  neurips_2022_zh.tex
resources/tmp/: bk.md  infer.py  model.py  test.py  train.py
tools/config/: p10k.zsh  quick_start.md  quick_start.sh  quick_zsh.sh  run_zsh_install.sh
tools/config/resources/: zshrc.sh
tools/speech/: draw.py  melspec.py  resample.py  use_librosa.py
tutorial/blog/: ProGit.md  WSL.md  docker.md  docker_torch_gpu.md  effective_vscode.md  first_pc.md  python_sdk.md  vscode_cxx.md
tutorial/blog/mini_py_sdk/: pyproject.toml
tutorial/blog/mini_py_sdk/mpkg/: main.py
tutorial/blog/resources/vscode_cxx/: CMakeLists.txt  function.cc  function.h  main.cc
tutorial/control_flow_analysis/: ArrayList.java  README.md  analyze.py  utils.py
tutorial/go_primer/: README.md
tutorial/go_primer/src/hello_world/: hello.go
tutorial/use_CMake/: README.md
tutorial/use_CMake/step1/ex1/: CMakeLists.txt  build.sh  helloworld.cxx
tutorial/use_CMake/step1/ex2/: CMakeLists.txt  helloworld.cxx
tutorial/use_CMake/step1/ex3/: CMakeLists.txt  helloworld.cxx
tutorial/use_CMake/step10/main/: CMakeLists.txt  build.sh  (+1 more)
tutorial/use_CMake/step10/make_lib/: CMakeLists.txt  own_math.cxx
tutorial/use_CMake/step2/ex1/: CMakeLists.txt  hellolibrary.cxx
tutorial/use_CMake/step2/ex2/: CMakeLists.txt  build.sh
tutorial/use_CMake/step2/ex2/add/: CMakeLists.txt
tutorial/use_CMake/step3/: CMakeLists.txt
tutorial/use_CMake/step3/add/: CMakeLists.txt
tutorial/use_CMake/step4/: CMakeLists.txt
tutorial/use_CMake/step5/: CMakeLists.txt
tutorial/use_CMake/step6/: CMakeLists.txt
tutorial/use_CMake/step6/add/: CMakeLists.txt
(+21 files in other folders)
